discussion/kv_engine/156529/156529_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: If42bca909b0e7207213dbefd76fa09def27ab931

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-09-07 11:39:50.000000000
Message: 
Patch Set 4: Patch Set 3 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-07 11:58:50.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12043/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include <spdlog/logger.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12043/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12043/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14331/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14331/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33627/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39470/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10830/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1706/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12802/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1686/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13655/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13893/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21839/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
